<resources>
    <string name="app_name">Perfume Store</string>
    <string name="email_input_hint">Input Email</string>
    <string name="full_name_input_hint">Input Full Name</string>
    <string name="phone_number_input_hint">Input Phone Number</string>
    <string name="password_input_hint">Input Password</string>
    <string name="confirm_password_input_hint">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="forget_password_text">Send</string>
    <string name="forget_password_content_description">Forget Password</string>
    <string name="register_text">Dont have an account? Register Now</string>
    <string name="login_text">Already have an account? Login Now</string>
    <string name="forget_password_success">Check your email for reset password link</string>
    <string name="search">Input perfume name</string>
    <string name="search_button">Search</string>
    <string name="back_button">Back</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="view_detail">View Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_order">Order</string>
    <string name="nav_about_us">Contact Us</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_view_profile_button">View Profile</string>
    <string name="check_out">Checkout</string>
    <string name="total_price">"Total Price: "</string>
    <string name="remove_cart_all">Clear Cart</string>
    <string name="pay_button">Pay</string>
    <string name="credit_card">Credit Card</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="customerBox_title">Customer Information</string>
    <string name="billing_product_list">Products</string>
    <string name="cart_empty">Your Cart Is Empty</string>
    <string name="map_api_key">AIzaSyA08qHiH4yKjoz8KwJ21T77_LjtNU7hqGg</string>
    <string name="nav_view_order_history">Order History</string>
    <string name="order_detail_button">View Detail</string>
    <string name="cart_title">Your cart</string>
    <string name="product_detail">Product Detail</string>
</resources>