<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/green"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/register_button_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:id="@+id/email_input"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:hint="@string/email_input_hint"
                android:autofillHints="emailAddress"
                android:inputType="text"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/full_name_input"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:hint="@string/full_name_input_hint"
                android:autofillHints="name"
                android:inputType="text"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/phone_number_input"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:hint="@string/phone_number_input_hint"
                android:autofillHints="phone"
                android:inputType="text"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/password_input"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:hint="@string/password_input_hint"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/confirm_password_input"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:hint="@string/confirm_password_input_hint"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/register_button_text"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:onClick="userRegister"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login_text"
            android:onClick="goToLogin"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>