<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/teal_150"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/forget_password_content_description"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/forget_password_success"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:text="@string/forget_password_success"
                android:visibility="gone" />
            <EditText
                android:id="@+id/email_input"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:hint="@string/email_input_hint"
                android:autofillHints="emailAddress"
                android:inputType="text"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/forget_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_text"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:onClick="forgetPassword"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textStyle="bold"
            android:onClick="goToLogin"
            android:layout_marginTop="200dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>