<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/lavender_origin"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/login_button_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:id="@+id/email_input"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:hint="@string/email_input_hint"
                android:autofillHints="emailAddress"
                android:inputType="text"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/password_input"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:hint="@string/password_input_hint"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:onClick="userLogin"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textStyle="bold"
            android:onClick="goToRegistration"
            android:layout_marginTop="200dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="goToForgetPassword"
            android:text="@string/forgot_password"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>