<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Billing">

    <LinearLayout
        android:id="@+id/billing_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:onClick="backToCart"
            android:src="@drawable/ic_arrow_left" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/billing_header"
        tools:ignore="MissingConstraints">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productBillingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/product_billing_view" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Total Price -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/billingTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!-- Customer Information Box -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customerBox_title"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name" />

            <EditText
                android:id="@+id/customerPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number" />

            <EditText
                android:id="@+id/customerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address" />
        </LinearLayout>

        <!-- Payment Method Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:textStyle="bold"
                />

            <RadioGroup
                android:id="@+id/paymentMethodRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonCreditCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_card" />

                <RadioButton
                    android:id="@+id/radioButtonEWallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_wallet" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash" />
            </RadioGroup>
        </LinearLayout>

        <!-- Back and Pay Button -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="backToCart"
                android:text="@string/back_button" />

            <Button
                android:id="@+id/buttonPay"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00AC47"
                android:onClick="checkout"
                android:textColor="@color/white"
                android:text="@string/pay_button" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>